<resources>
    <string name="app_name">PawSecure</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="start_hello">Hello!</string>
    <string name="start_msg">First of all login into your account, if you don\'t have one, we can start one.</string>
    <string name="login_notaccount">Don\'t have an account?</string>
    <string name="account_password">Password</string>
    <string name="account_email">Email</string>
    <string name="login_msg">Happy to see you return!</string>
    <string name="account_forgot">Forgot your password?</string>
    <string name="login_hello">Welcome back!</string>
    <string name="register_hello">Welcome!</string>
    <string name="register_msg">Let\'s create an account.</string>
    <string name="account_password_again">Password again</string>
    <string name="register_yesaccount">Already have an account?</string>
    <string name="email_resend_available">Resend available in</string>
    <string name="email_verify">Verify</string>
    <string name="seconds">seconds</string>
    <string name="email_resend_email">Resend email</string>
    <string name="email_hello">Cool!</string>
    <string name="email_msg">We send you an email, check it and follow the instructions to verify your account.</string>
    <string name="activity_letsgo">Let\'s go!</string>
    <string name="activity_hello">Activate!</string>
    <string name="activity_msg">Your account has been activated, welcome to PawSecure!</string>
    <string name="change_password_hello">Change password</string>
    <string name="change_password_msg">Follow the instructions to change your password.</string>
    <string name="change_password_actual">Actual password</string>
    <string name="change_password_new">New password</string>
    <string name="change_password_new_again">New password again</string>
    <string name="change_password_change">Change password</string>
    <string name="changed_password_hello">Changed!</string>
    <string name="changed_password_msg">Your password was changed! You will be redirect to your profile in few seconds.</string>
    <string name="changed_password_return">Return me</string>
    <string name="nexus_home">Home</string>
    <string name="nexus_add_description">Add space</string>
    <string name="nexus_icon_description">Your animal icon</string>
    <string name="add_hello">Let\'s create!</string>
    <string name="add_msg">Time to create a PawSecure!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="add_group">Group</string>
    <string name="add_single">Single</string>
    <string name="add_text">Choose your space</string>
    <string name="decide_hello">Your pets</string>
    <string name="decide_msg">Let\'s choose your pets for the group.</string>
    <string name="done">Done</string>
    <string name="account_name">Name</string>
    <string name="login_validation_error">The email nor the password are correct.</string>
    <string name="wait">Wait to the server\'s response.</string>
    <string name="sensor_light">Light</string>
    <string name="key_token" translatable="false">KEY_TOKEN</string>
    <string name="key_directory" translatable="false">KEY_DIRECTORY</string>
    <string name="data_directory" translatable="false">DATA_DIRECTORY</string>
    <string name="data_email" translatable="false">DATA_EMAIL</string>
    <string name="data_password" translatable="false">DATA_PASSWORD</string>
    <string name="key_type" translatable="false">KEY_TYPE</string>
    <string name="choose_hello">Create a space for your pets!</string>
    <string name="choose_msg">Choose the pets you want for your space.</string>
    <string name="item_space_description">The image of your pet</string>
    <string name="choose_create_pet">Create profile</string>
    <string name="choose_create_msg">Create a profile for your pet</string>
    <string name="make_pet_description">Edit pet\'s icon</string>
    <string name="account_description">Description</string>
    <string name="create">Create</string>
    <string name="account_birthday">Birthday</string>
    <string name="make_pet_hello">Create your pet\'s profile!</string>
    <string name="date_picker_title">Select a date</string>
    <string name="icon">Icon</string>
    <string name="image">Image</string>
    <string name="create_pet_icon">Choose an icon</string>
    <string name="create_pet_image">Change background image</string>
    <string name="account_catchword">Catchword</string>
    <string name="create_pet_error">Couldn\'t create profile.</string>
    <string name="retry">Retry</string>
    <string name="permissions_title">Permissions</string>
    <string name="permissions_subtitle">Manage your permissions</string>
    <string name="create_space_title">Create space</string>
    <string name="choose_subtitle">Select pets for the space</string>
    <string name="create_pet_title">Create pet</string>
    <string name="magnitude_sound" translatable="false">%</string>
    <string name="magnitude_humidity" translatable="false">%</string>
    <string name="magnitude_gas" translatable="false">%</string>
    <string name="magnitude_temperature" translatable="false">°C</string>
    <string name="magnitude_movement" translatable="false">%</string>
    <string name="sensors">Sensors</string>
    <string name="records">Records</string>
    <string name="create_space_subtitle">Define your space\'s info</string>
    <string name="link_subtitle">Link your space</string>
    <string name="link">Link</string>
    <string name="go_settings">Manage</string>
    <string name="link_search_error">The system has deny the permission.</string>
    <string name="link_title">Search the device</string>
    <string name="search">Search</string>
    <string name="title_msg">Search desired device and tap to link it.</string>
    <string name="link_linking_error">The connection go wrong.</string>
    <string name="space_not_linked">The space isn\'t linked to any device, you need to link.</string>
    <string name="configure_wifi">Configure WiFi</string>
    <string name="wifi_link_msg">Configure the connection to WiFi from the space.</string>
    <string name="ssid">SSID</string>
    <string name="link_bond">Bonding…</string>
    <string name="link_uuid">Talking…</string>
    <string name="link_connect">Connecting…</string>
    <string name="link_reading">Reading…</string>
    <string name="link_writing">Writing…</string>
    <string name="link_saving">Saving…</string>
    <string name="wifi_link_hello">Connect to WiFi</string>
    <string name="item_space_link">Link</string>
    <string name="pet_none">None</string>
    <string name="space_maps_title">Mark in the space</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="space_last">Last update: %1$s</string>
    <string name="sound">Sound</string>
    <string name="gas">Gas</string>
    <string name="motion">Motion</string>
    <string name="presence">Presence</string>
    <string name="position">Location</string>
    <string name="closeness">Closeness</string>
    <string name="reload_connection">Reload all data</string>
    <string name="sensor_value" translatable="false">%1$s %2$s</string>
    <string name="sensor_string" translatable="false">%1$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chip_space_reload">Reload data</string>
    <string name="chip_space_target">Target this pet</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="strong">Strong</string>
    <string name="weak">Weak</string>
    <string name="account_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="save_changes">Save changes</string>
    <string name="link_linking_sucess">Success linking!</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="profile_title">Your profile</string>
    <string name="profile_subtitle">Edit your info</string>
    <string name="not_login">You are not verified.</string>
    <string name="make_buzzer">Make a sound</string>
    <string name="make_fan">Start the fan</string>
    <string name="make_light">On light</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="item_space_act">Act</string>
</resources>